--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -352,12 +352,13 @@ footer.sticky-bottom {
 // Publications
 
 .publications {
+  display: inline-block;
   margin-top: 2rem;
   h1 {
     color: var(--global-theme-color);
     font-size: 2rem;
     text-align: center;
-    margin-top: 1em;
+    margin-top: 10em;
     margin-bottom: 1em;
   }
   h2 {
